added controllers and updated routes

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,1 +1,51 @@
-<h1>Lindsay Dages</h1>
+<div class="border">
+  <div class="section">
+    <div class="title">
+        <h1>Lindsay Dages</h1>
+    </div>
+    <div class="content">
+      test
+    </div>
+  </div>
+  <div class="section">
+    <div class="title">
+      <h1>Projects</h1>
+    </div>
+    <div class="content">
+      test
+    </div>
+  </div>
+  <div class="section">
+    <div class="title">
+      <h1>Tools</h1>
+    </div>
+    <div class="content">
+      test
+    </div>
+  </div>
+  <div class="section">
+    <div class="title">
+      <h1>Example Code</h1>
+    </div>
+    <div class="content">
+      test
+    </div>
+  </div>
+  <div class="section">
+    <div class="title">
+      <h1>How Tos</h1>
+    </div>
+    <div class="content">
+
+    </div>
+  </div>
+  <div class="section">
+    <div class="title">
+      <h1>Contact</h1>
+    </div>
+    <div class="content">
+
+    </div>
+  </div>
+
+</div>
