--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.border{
+}
+
+.content{
+  grid-area: content;
+}
+
+.title{
+  text-align: center;
+  grid-area: title;
+}
+.section{
+  display:grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: auto 400px;
+  grid-template-areas:
+    ". title ."
+    ". content .";
+}
