--- a/app/views/me/projects/new.html.erb
+++ b/app/views/me/projects/new.html.erb
@@ -1,1 +1,8 @@
 <h1>New Project</h1>
+
+<%= simple_form_for @project, url: me_projects_path do |f| %>
+  <%= f.input :name %>
+  <%= f.input :description %>
+  <%= f.input :link %>
+  <%= f.button :submit, 'Submit' %>
+<% end %>
