--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,17 +1,15 @@
-<ul class="result">
 
-</ul>
 
 <div class="border">
-  <div class="section">
-    <div class="title">
-        <h1>Lindsay Dages</h1>
+    <div class="head_line">
+      <div class="title">
+          <h1 class="main right_align ">Lindsay</h1>
+          <h1 class="main right_align">K.</h1>
+          <h1 class="main right_align">Dages</h1>
+      </div>
     </div>
-    <div class="content">
-      test
-    </div>
-  </div>
-  <div class="section">
+
+  <div class="section projects">
     <div class="title">
       <h1>Projects</h1>
     </div>
@@ -21,7 +19,7 @@
       <% end %>
     </div>
   </div>
-  <div class="section">
+  <div class="section tools">
     <div class="title">
       <h1>Tools</h1>
     </div>
@@ -31,7 +29,7 @@
       <% end %>
     </div>
   </div>
-  <div class="section">
+  <!-- <div class="section examples">
     <div class="title">
       <h1>Example Code</h1>
     </div>
@@ -41,20 +39,22 @@
       <% end %>
     </div>
   </div>
-  <div class="section">
+  <div class="section how_to">
     <div class="title">
       <h1>How Tos</h1>
     </div>
     <div class="content">
       test
     </div>
-  </div>
-  <div class="section">
+  </div> -->
+  <div class="contact">
     <div class="title">
-      <h1>Contact</h1>
+      <h1 class="main left_align">Contact</h1>
     </div>
-    <div class="content">
-      test
+    <div class="content flex_contact">
+      <i class="fa fa-linkedin fa-5x" aria-hidden="true"></i>
+      <i class="fa fa-github fa-5x" aria-hidden="true"></i>
+      <i class="fa fa-envelope-o fa-5x " aria-hidden="true"></i>
     </div>
   </div>
 
