--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <%= link_to 'sign up', new_admin_registration_path %>
+    <!-- <%= link_to 'sign up', new_admin_registration_path %>
     <%= link_to 'sign in', new_admin_session_path %>
-    <%= link_to 'sign out', destroy_admin_session_path, method: :delete %>
+    <%= link_to 'sign out', destroy_admin_session_path, method: :delete %> -->
     <%= yield %>
   </body>
 </html>
