more styling changes

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -4,6 +4,33 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+ul{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  max-height: 300px;
+  padding: 0px;
+}
+
+li{
+  text-align: center;
+  display: inline;
+  margin: 25px;
+}
+
+a{
+  text-decoration: none;
+  color: #E4C220;
+  margin: 5px;
+}
+
+a:hover{
+  color: white;
+}
+
 .border{
   padding: 15px 150px;
 }
@@ -14,8 +41,6 @@
 }
 
 .title{
-  text-align: center;
-  grid-area: title;
   font-family: 'Ovo', serif;
 }
 
@@ -24,19 +49,17 @@
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   display:grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  grid-template-rows: auto 400px;
   grid-template-areas:
-    ". title ."
-    ". content .";
+    "content";
 }
 
-
-
-
-.main{
+.main_size{
   font-size: 150px;
   line-height: 50px;
+}
+
+.secondary_size{
+  font-size: 100px;
 }
 
 .left_align{
@@ -55,12 +78,13 @@
 .tools{
   background: #E4C220;
   color:  #007E9E;
+  font-size: 30px;
+  text-align: center;
 }
 
 .flex_contact{
   margin-top: 25px;
   display: flex;
-  flex-direction: flex-end;
   justify-content: space-between;
   color: #007E9E;
 }
