--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,61 +1,59 @@
-
-
 <div class="border">
     <div class="head_line">
       <div class="title">
-          <h1 class="main right_align ">Lindsay</h1>
-          <h1 class="main right_align">K.</h1>
-          <h1 class="main right_align">Dages</h1>
+          <h1 class="main_size right_align ">Lindsay</h1>
+          <h1 class="main_size right_align">K.</h1>
+          <h1 class="main_size right_align">Dages</h1>
       </div>
     </div>
 
   <div class="section projects">
-    <div class="title">
-      <h1>Projects</h1>
-    </div>
     <div class="content">
-      <% @projects.each do |project| %>
-        <%= project.name %>
-      <% end %>
+      <ul>
+        <li>
+          <a href="https://github.com/counterThreat/chess_app"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+          <a href="https://firehose-chess-app.herokuapp.com/">Counter Threat</a>
+        </li>
+        <li>
+          <a href="https://github.com/lnzd17/grammable"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+          <a href="https://grammable-lindsay-dages.herokuapp.com/">Grammable</a>
+        </li>
+        <li>
+          <a href="https://github.com/lnzd17/flixter"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+          <a href="https://flixter-lindsay-dages.herokuapp.com/">Flixter</a>
+        </li>
+        <li>
+          <a href="https://github.com/lnzd17/todo"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+          <a href="https://todoster-lindsay-dages.herokuapp.com/">Todster</a>
+        </li>
+        <li>
+          <a href="https://github.com/lnzd17/splurty"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+          <a href="https://splurty-lindsay-dages.herokuapp.com/">Splurty</a>
+        </li>
+        <li>
+          <a href="https://github.com/lnzd17/nomster"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+          <a href="https://nomster-lindsay-dages.herokuapp.com/">Nomster</a>
+        </li>
+      </ul>
     </div>
   </div>
+
   <div class="section tools">
-    <div class="title">
-      <h1>Tools</h1>
-    </div>
     <div class="content">
-      <% @tools.each do |tool| %>
-        <%= tool.name %>
-      <% end %>
+      <i class="icon-ruby-on-rails fa-5x"></i>
+      <i class="icon-javascript fa-5x"></i>
+      <i class="icon-heroku fa-5x"></i>
+      <i class="icon-postgres-alt fa-5x"></i>
+      <i class="icon-css3 fa-5x"></i>
+      <i class="icon-html5 fa-5x"></i>
     </div>
   </div>
-  <!-- <div class="section examples">
-    <div class="title">
-      <h1>Example Code</h1>
-    </div>
-    <div class="content">
-      <% @solutions.each do |solution| %>
-        <%= solution.name %>
-      <% end %>
-    </div>
-  </div>
-  <div class="section how_to">
-    <div class="title">
-      <h1>How Tos</h1>
-    </div>
-    <div class="content">
-      test
-    </div>
-  </div> -->
+
   <div class="contact">
-    <div class="title">
-      <h1 class="main left_align">Contact</h1>
-    </div>
     <div class="content flex_contact">
       <i class="fa fa-linkedin fa-5x" aria-hidden="true"></i>
       <i class="fa fa-github fa-5x" aria-hidden="true"></i>
       <i class="fa fa-envelope-o fa-5x " aria-hidden="true"></i>
     </div>
   </div>
-
 </div>
