--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,12 +1,11 @@
 <div class="border">
-    <div class="head_line">
-      <div class="title">
-          <h1 class="main_size right_align ">Lindsay</h1>
-          <h1 class="main_size right_align">K.</h1>
-          <h1 class="main_size right_align">Dages</h1>
-      </div>
+  <div class="head_line">
+    <div class="title">
+        <h1 class="main_size right_align ">Lindsay</h1>
+        <h1 class="main_size right_align">K.</h1>
+        <h1 class="main_size right_align">Dages</h1>
     </div>
-
+  </div>
   <div class="section projects">
     <div class="content">
       <ul>
@@ -37,18 +36,16 @@
       </ul>
     </div>
   </div>
-
   <div class="section tools">
-    <div class="content">
-      <i class="icon-ruby-on-rails fa-5x"></i>
-      <i class="icon-javascript fa-5x"></i>
-      <i class="icon-heroku fa-5x"></i>
-      <i class="icon-postgres-alt fa-5x"></i>
-      <i class="icon-css3 fa-5x"></i>
-      <i class="icon-html5 fa-5x"></i>
+    <div class="content tools_spacing">
+      <i class="icon-ruby-on-rails fa-4x"></i>
+      <i class="icon-javascript fa-4x"></i>
+      <i class="icon-heroku fa-4x"></i>
+      <i class="icon-postgres-alt fa-4x"></i>
+      <i class="icon-css3 fa-4x"></i>
+      <i class="icon-html5 fa-4x"></i>
     </div>
   </div>
-
   <div class="contact">
     <div class="content flex_contact">
       <i class="fa fa-linkedin fa-5x" aria-hidden="true"></i>
