more styling changes

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -4,72 +4,27 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
-html, body {
-  height: 100%;
-}
-body {
-  display: flex;
-  flex-direction: column;
-}
-
-ul{
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  max-height: 300px;
-  padding: 0px;
-}
-
-li{
-  text-align: center;
-  display: inline;
-  margin: 25px;
-}
-
-a{
-  text-decoration: none;
-  color: #E4C220;
-  margin: 5px;
-}
-
-a:hover{
-  color: white;
-}
-
 .border{
   padding: 15px 150px;
-  flex: 1 0 auto;
 }
 
 .content{
-  grid-area: content;
   font-family: 'Muli', sans-serif;
   padding: 10px;
+  font-size: 15px;
 }
 
-.title{
-  font-family: 'Ovo', serif;
-}
 
 .section{
-  margin-bottom: 50px;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  display:grid;
-  grid-template-areas:
-    "content";
-}
-
-.main_size{
-  font-size: 150px;
-  line-height: 50px;
+  height: 100%;
+  text-align: center;
 }
 
 .secondary_size{
-  font-size: 100px;
+  font-size: 75px;
+  font-family: 'Ovo', serif;
 }
 
 .left_align{
@@ -80,32 +35,120 @@ a:hover{
   text-align: right;
 }
 
+.t_column{
+  grid-area: t;
+}
+.p_column{
+  grid-area: p;
+}
+.row{
+  display: grid;
+  grid-template-columns: 1fr 15px 1fr;
+  grid-template-areas: "p . t";
+}
+
+// headline css
+
+
+.main_size{
+  font-size: 125px;
+  line-height: 50px;
+}
+
+.title{
+  font-family: 'Ovo', serif;
+}
+
+// projects css
+
 .projects{
   background: #007E9E;
   color: #E4C220;
 }
 
+ul{
+  list-style: none;
+  padding: 0px;
+  text-align: left;
+}
+
+li{
+  margin: 10px;
+}
+
+a{
+  text-decoration: none;
+  color: #E4C220;
+  margin-right: 20px;
+}
+
+a:hover{
+  color: white;
+}
+
+// Tools CSS
 .tools{
   background: #E4C220;
   color:  #007E9E;
-  font-size: 30px;
   text-align: center;
 }
 
-.flex_contact{
-  margin-top: 25px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.tools_spacing i {
-  margin: 10px;
-}
+// contact css
 
 .contact{
   padding: 15px 150px;
 }
 
-.head_line{
-  padding-bottom: 15px;
+.flex_contact{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
+/* flip css */
+
+/* entire container, keeps perspective */
+.flip-container {
+	perspective: 1000px;
+  margin-bottom: 25px;
+
+}
+	/* flip the pane when hovered */
+	.flip-container:hover .flipper, .flip-container.hover .flipper {
+		transform: rotateY(180deg);
+	}
+
+.flip-container, .front, .back {
+	width: 100%;
+  height: 400px;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
 }
