--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,49 +1,85 @@
 <div class="border">
   <div class="head_line">
     <div class="title">
-        <h1 class="main_size right_align ">Lindsay</h1>
-        <h1 class="main_size right_align">K.</h1>
-        <h1 class="main_size right_align">Dages</h1>
+      <h1 class="main_size left_align ">Lindsay K. Dages</h1>
+      <!-- <h1 class="main_size left_align">K.</h1>
+      <h1 class="main_size left_align">Dages</h1> -->
     </div>
   </div>
-  <div class="section projects">
-    <div class="content">
-      <ul>
-        <li>
-          <a href="https://github.com/counterThreat/chess_app"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-          <a href="https://firehose-chess-app.herokuapp.com/">Counter Threat</a>
-        </li>
-        <li>
-          <a href="https://github.com/lnzd17/grammable"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-          <a href="https://grammable-lindsay-dages.herokuapp.com/">Grammable</a>
-        </li>
-        <li>
-          <a href="https://github.com/lnzd17/flixter"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-          <a href="https://flixter-lindsay-dages.herokuapp.com/">Flixter</a>
-        </li>
-        <li>
-          <a href="https://github.com/lnzd17/todo"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-          <a href="https://todoster-lindsay-dages.herokuapp.com/">Todster</a>
-        </li>
-        <li>
-          <a href="https://github.com/lnzd17/splurty"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-          <a href="https://splurty-lindsay-dages.herokuapp.com/">Splurty</a>
-        </li>
-        <li>
-          <a href="https://github.com/lnzd17/nomster"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-          <a href="https://nomster-lindsay-dages.herokuapp.com/">Nomster</a>
-        </li>
-      </ul>
+  <div class="row">
+    <div class="p_column">
+      <div class="flip-container">
+          <div class="flipper">
+            <div class="front">
+              <div class="section projects">
+                <div class="content">
+                  <h1 class="secondary_size">
+                    Check out my projects!
+                  </h1>
+                </div>
+              </div>
+            </div>
+            <div class="back">
+              <div class="section projects">
+                <div class="content">
+                  <ul>
+                    <li>
+                      <a href="https://github.com/counterThreat/chess_app"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                      <a href="https://firehose-chess-app.herokuapp.com/">Counter Threat</a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/lnzd17/grammable"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                      <a href="https://grammable-lindsay-dages.herokuapp.com/">Grammable</a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/lnzd17/flixter"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                      <a href="https://flixter-lindsay-dages.herokuapp.com/">Flixter</a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/lnzd17/todo"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                      <a href="https://todoster-lindsay-dages.herokuapp.com/">Todster</a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/lnzd17/splurty"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                      <a href="https://splurty-lindsay-dages.herokuapp.com/">Splurty</a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/lnzd17/nomster"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                      <a href="https://nomster-lindsay-dages.herokuapp.com/">Nomster</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
-  </div>
-  <div class="section tools">
-    <div class="content tools_spacing">
-      <i class="icon-ruby-on-rails fa-4x"></i>
-      <i class="icon-javascript fa-4x"></i>
-      <i class="icon-heroku fa-4x"></i>
-      <i class="icon-postgres-alt fa-4x"></i>
-      <i class="icon-css3 fa-4x"></i>
-      <i class="icon-html5 fa-4x"></i>
+    <div class="t_column">
+      <div class="flip-container">
+          <div class="flipper">
+            <div class="front">
+              <div class="section tools">
+                <div class="content">
+                  <h1 class="secondary_size">
+                    Tools I Use
+                  </h1>
+                </div>
+              </div>
+            </div>
+            <div class="back">
+              <div class="section tools">
+                <div class="content tools_spacing">
+                  <i class="icon-ruby-on-rails fa-4x"></i>
+                  <i class="icon-javascript fa-4x"></i>
+                  <i class="icon-heroku fa-4x"></i>
+                  <i class="icon-postgres-alt fa-4x"></i>
+                  <i class="icon-css3 fa-4x"></i>
+                  <i class="icon-html5 fa-4x"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
   </div>
 </div>
