--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,9 +1,9 @@
 <div class="border">
   <div class="head_line">
     <div class="title">
-      <h1 class="main_size left_align ">Lindsay K. Dages</h1>
-      <!-- <h1 class="main_size left_align">K.</h1>
-      <h1 class="main_size left_align">Dages</h1> -->
+      <h1 class="main_size left_align">Lindsay</h1>
+      <h1 class="main_size left_align">K.</h1>
+      <h1 class="main_size left_align">Dages</h1>
     </div>
   </div>
   <div class="row">
@@ -24,28 +24,28 @@
                 <div class="content">
                   <ul>
                     <li>
-                      <a href="https://github.com/counterThreat/chess_app"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                      <a href="https://firehose-chess-app.herokuapp.com/">Counter Threat</a>
+                      <a href="https://github.com/counterThreat/chess_app" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                      <a href="https://firehose-chess-app.herokuapp.com/" target="_blank">Counter Threat</a>
                     </li>
                     <li>
-                      <a href="https://github.com/lnzd17/grammable"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                      <a href="https://grammable-lindsay-dages.herokuapp.com/">Grammable</a>
+                      <a href="https://github.com/lnzd17/grammable" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                      <a href="https://grammable-lindsay-dages.herokuapp.com/" target="_blank">Grammable</a>
                     </li>
                     <li>
-                      <a href="https://github.com/lnzd17/flixter"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                      <a href="https://flixter-lindsay-dages.herokuapp.com/">Flixter</a>
+                      <a href="https://github.com/lnzd17/flixter" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                      <a href="https://flixter-lindsay-dages.herokuapp.com/" target="_blank">Flixter</a>
                     </li>
                     <li>
-                      <a href="https://github.com/lnzd17/todo"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                      <a href="https://todoster-lindsay-dages.herokuapp.com/">Todster</a>
+                      <a href="https://github.com/lnzd17/todo" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                      <a href="https://todoster-lindsay-dages.herokuapp.com/" target="_blank">Todster</a>
                     </li>
                     <li>
-                      <a href="https://github.com/lnzd17/splurty"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                      <a href="https://splurty-lindsay-dages.herokuapp.com/">Splurty</a>
+                      <a href="https://github.com/lnzd17/splurty" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                      <a href="https://splurty-lindsay-dages.herokuapp.com/" target="_blank">Splurty</a>
                     </li>
                     <li>
-                      <a href="https://github.com/lnzd17/nomster"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                      <a href="https://nomster-lindsay-dages.herokuapp.com/">Nomster</a>
+                      <a href="https://github.com/lnzd17/nomster" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                      <a href="https://nomster-lindsay-dages.herokuapp.com/" target="_blank">Nomster</a>
                     </li>
                   </ul>
                 </div>
@@ -72,9 +72,13 @@
                   <i class="icon-ruby-on-rails fa-4x"></i>
                   <i class="icon-javascript fa-4x"></i>
                   <i class="icon-heroku fa-4x"></i>
-                  <i class="icon-postgres-alt fa-4x"></i>
-                  <i class="icon-css3 fa-4x"></i>
-                  <i class="icon-html5 fa-4x"></i>
+                  <ul>
+                    <li>Codehip</li>
+                    <li>AJAX</li>
+                    <li>RSpec</li>
+                    <li>Bootstrap</li>
+                    <li>Rubocop</li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -85,8 +89,11 @@
 </div>
 <div class="contact">
   <div class="content flex_contact">
-    <i class="fa fa-linkedin fa-5x" aria-hidden="true"></i>
-    <i class="fa fa-github fa-5x" aria-hidden="true"></i>
-    <i class="fa fa-envelope-o fa-5x " aria-hidden="true"></i>
+    <a href="https://www.linkedin.com/in/lindsaykdages/" target="_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+    <a href="https://github.com/lnzd17" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+    <a href="mailto:lindsay.dages@outlook.com"><i class="fa fa-envelope-o fa-3x " aria-hidden="true"></i></a>
+
+
+
   </div>
 </div>
