--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -68,10 +68,12 @@
             </div>
             <div class="back">
               <div class="section tools">
-                <div class="content tools_spacing">
-                  <i class="icon-ruby-on-rails fa-4x"></i>
-                  <i class="icon-javascript fa-4x"></i>
-                  <i class="icon-heroku fa-4x"></i>
+                <div class="content">
+                  <div class="white_icons">
+                      <i class="icon-ruby-on-rails fa-4x"></i>
+                      <i class="icon-javascript fa-4x"></i>
+                      <i class="icon-heroku fa-4x"></i>
+                  </div>
                   <ul>
                     <li>Codehip</li>
                     <li>AJAX</li>
