--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -44,7 +44,7 @@
 
 .row{
   display: grid;
-  grid-template-columns: 1fr 15px 1fr;
+  grid-template-columns: 450px 15px 450px;
   grid-template-areas: "p . t";
 }
 
@@ -109,6 +109,7 @@ a:hover{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 100%;
 }
 
 .flex_contact a{
@@ -169,7 +170,7 @@ a:hover{
 
 // media queries
 
-@media (max-width: 500px){
+@media (max-width: 600px){
   .row{
     display: grid;
     grid-template-rows: 1fr 15px 1fr;
