--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -37,7 +37,7 @@
                     </li>
                     <li>
                       <a href="https://github.com/lnzd17/todo" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                      <a href="https://todoster-lindsay-dages.herokuapp.com/" target="_blank">Todster</a>
+                      <a href="https://todoster-lindsay-dages.herokuapp.com/" target="_blank">Todoster</a>
                     </li>
                     <li>
                       <a href="https://github.com/lnzd17/splurty" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
@@ -94,8 +94,5 @@
     <a href="https://www.linkedin.com/in/lindsaykdages/" target="_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
     <a href="https://github.com/lnzd17" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
     <a href="mailto:lindsay.dages@outlook.com"><i class="fa fa-envelope-o fa-3x " aria-hidden="true"></i></a>
-
-
-
   </div>
 </div>
