--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -89,7 +89,7 @@
     </div>
   </div>
   <div class="contact">
-    <div class="content flex_contact">
+    <div class="flex_contact">
       <a href="https://www.linkedin.com/in/lindsaykdages/" target="_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
       <a href="https://github.com/lnzd17" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
       <a href="mailto:lindsay.dages@outlook.com"><i class="fa fa-envelope-o fa-3x " aria-hidden="true"></i></a>
