--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -75,7 +75,7 @@
                       <i class="icon-heroku fa-4x"></i>
                   </div>
                   <ul>
-                    <li>Codehip</li>
+                    <li>Codeship</li>
                     <li>AJAX</li>
                     <li>RSpec</li>
                     <li>Bootstrap</li>
