--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -14,7 +14,7 @@
               <div class="section projects">
                 <div class="content">
                   <h1 class="secondary_size">
-                    Check out my projects!
+                    Check Out My Projects!
                   </h1>
                 </div>
               </div>
