--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -4,6 +4,11 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+h1{
+  padding: 0px;
+  margin: 0px;
+}
+
 .border{
   margin-left: auto;
   margin-right: auto;
@@ -13,7 +18,7 @@
 
 .content{
   font-family: 'Muli', sans-serif;
-  padding: 10px;
+  padding: 50px;
   font-size: 1.5rem;
 }
 
@@ -75,11 +80,13 @@
 ul{
   list-style: none;
   padding: 0px;
+  margin: 0px;
   text-align: left;
 }
 
 li{
-  margin: 10px;
+  margin: 0px;
+  padding: 0px;
 }
 
 a{
@@ -102,6 +109,21 @@ a:hover{
 .white_icons{
   color: white;
 }
+
+i{
+  padding:0px;
+  margin: 0px;
+}
+
+.two_columns{
+  column-count: 2;
+  column-width: 100px;
+  width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+}
+
 
 // contact css
 .contact{
@@ -199,7 +221,7 @@ a:hover{
 
   .content{
     font-family: 'Muli', sans-serif;
-    padding: 10px;
+    padding: 50px 20px;
     font-size: 1rem;
   }
 
@@ -208,6 +230,15 @@ a:hover{
     padding: 0px;
     margin: 0px;
     line-height: 4rem;
+  }
+
+  .two_columns{
+    column-count: 2;
+    column-width: 50px;
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
   }
 
 
