--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -74,12 +74,13 @@
                       <i class="icon-javascript fa-4x"></i>
                       <i class="icon-heroku fa-4x"></i>
                   </div>
-                  <ul>
+                  <ul class="two_columns">
                     <li>Codeship</li>
                     <li>AJAX</li>
                     <li>RSpec</li>
                     <li>Bootstrap</li>
                     <li>Rubocop</li>
+                    <li>SQL</li>
                   </ul>
                 </div>
               </div>
