--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,17 +1,17 @@
 <div class="border">
-  <div class="head_line">
-    <div class="title">
-      <h1 class="main_size left_align">Lindsay</h1>
-      <h1 class="main_size left_align">K.</h1>
-      <h1 class="main_size left_align">Dages</h1>
-    </div>
-  </div>
   <div class="row">
+    <div class="main_headline">
+      <div class="title">
+        <h1 class="main_size left_align">Lindsay</h1>
+        <h1 class="main_size left_align">K.</h1>
+        <h1 class="main_size left_align">Dages</h1>
+      </div>
+    </div>
     <div class="p_column">
       <div class="flip-container">
-          <div class="flipper">
-            <div class="front">
-              <div class="section projects">
+        <div class="flipper">
+          <div class="front">
+            <div class="section projects">
                 <div class="content">
                   <h1 class="secondary_size">
                     Check Out My Projects!
@@ -19,54 +19,61 @@
                 </div>
               </div>
             </div>
-            <div class="back">
-              <div class="section projects">
-                <div class="content">
-                  <ul>
-                    <li>
-                      <a href="https://github.com/counterThreat/chess_app" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                      <a href="https://firehose-chess-app.herokuapp.com/" target="_blank">Counter Threat</a>
-                    </li>
-                    <li>
-                      <a href="https://github.com/lnzd17/grammable" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                      <a href="https://grammable-lindsay-dages.herokuapp.com/" target="_blank">Grammable</a>
-                    </li>
-                    <li>
-                      <a href="https://github.com/lnzd17/flixter" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                      <a href="https://flixter-lindsay-dages.herokuapp.com/" target="_blank">Flixter</a>
-                    </li>
-                    <li>
-                      <a href="https://github.com/lnzd17/todo" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                      <a href="https://todoster-lindsay-dages.herokuapp.com/" target="_blank">Todoster</a>
-                    </li>
-                    <li>
-                      <a href="https://github.com/lnzd17/splurty" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                      <a href="https://splurty-lindsay-dages.herokuapp.com/" target="_blank">Splurty</a>
-                    </li>
-                    <li>
-                      <a href="https://github.com/lnzd17/nomster" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                      <a href="https://nomster-lindsay-dages.herokuapp.com/" target="_blank">Nomster</a>
-                    </li>
-                  </ul>
-                </div>
+          <div class="back">
+            <div class="section projects">
+              <div class="content">
+                <ul>
+                  <li>
+                    <a href="https://github.com/counterThreat/chess_app" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://firehose-chess-app.herokuapp.com/" target="_blank">Counter Threat</a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/lnzd17/grammable" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://grammable-lindsay-dages.herokuapp.com/" target="_blank">Grammable</a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/lnzd17/flixter" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://flixter-lindsay-dages.herokuapp.com/" target="_blank">Flixter</a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/lnzd17/todo" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://todoster-lindsay-dages.herokuapp.com/" target="_blank">Todoster</a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/lnzd17/splurty" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://splurty-lindsay-dages.herokuapp.com/" target="_blank">Splurty</a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/lnzd17/nomster" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://nomster-lindsay-dages.herokuapp.com/" target="_blank">Nomster</a>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="sub_headline">
+      <div class="title">
+        <h1 class="sub_title"></h1>
+        <h1 class="sub_title"></h1>
+        <h1 class="sub_title">Web Developer</h1>
+      </div>
     </div>
     <div class="t_column">
       <div class="flip-container">
-          <div class="flipper">
-            <div class="front">
-              <div class="section tools">
-                <div class="content">
-                  <h1 class="secondary_size">
-                    Tools I Use
-                  </h1>
-                </div>
+        <div class="flipper">
+          <div class="front">
+            <div class="section tools">
+              <div class="content">
+                <h1 class="secondary_size">
+                  Tools I Use
+                </h1>
               </div>
             </div>
-            <div class="back">
+          </div>
+          <div class="back">
               <div class="section tools">
                 <div class="content">
                   <i class="icon-ruby-on-rails fa-4x"></i>
@@ -83,8 +90,8 @@
                 </div>
               </div>
             </div>
-          </div>
         </div>
+      </div>
     </div>
   </div>
   <div class="contact">
