--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -64,7 +64,7 @@ h1{
 
 .row{
   display: grid;
-  display: -ms-grid;
+  -ms-display: grid;
   grid-template-columns: 450px 15px 450px;
   -ms-grid-template-columns: 450px 15px 450px;
   grid-template-areas:
@@ -231,8 +231,7 @@ i{
 
 @media (max-width: 600px){
   .row{
-    display: grid;
-    display: -ms-grid;
+    -ms-display: grid;
     grid-template-rows: 150px 110px 1fr 15px 1fr;
     -ms-grid-template-rows: 150px 110px 1fr 15px 1fr;
     grid-template-columns: auto;
