--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -111,14 +111,14 @@ ul{
 }
 
 li{
-  margin: 0px;
+  margin: 0px 0px 5px 0px;
   padding: 0px;
 }
 
 a{
   text-decoration: none;
   color: #E4C220;
-  margin-right: 20px;
+  margin-right: 30px;
 }
 
 a:hover{
@@ -132,12 +132,8 @@ a:hover{
   text-align: center;
 }
 
-.white_icons{
-  color: white;
-}
-
 i{
-  padding:0px;
+  padding: 0px;
   margin: 0px;
 }
 
@@ -147,7 +143,10 @@ i{
   width: 250px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 50px;
+  margin-top: 35px;
+}
+.two_columns li{
+  padding: 5px;
 }
 
 
@@ -293,7 +292,7 @@ i{
     width: 150px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
+    margin-top: 35px;
   }
 
 
