--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,10 +1,19 @@
 <div class="border">
   <div class="row">
     <div class="main_headline">
-      <div class="title">
-        <h1 class="main_size left_align">Lindsay</h1>
-        <h1 class="main_size left_align">K.</h1>
-        <h1 class="main_size left_align">Dages</h1>
+      <div class="flip-container">
+        <div class="flipper">
+          <div class="front">
+            <div class="title">
+              <h1 class="main_size left_align">Lindsay</h1>
+              <h1 class="main_size left_align">K.</h1>
+              <h1 class="main_size left_align">Dages</h1>
+            </div>
+          </div>
+          <div class="back">
+            <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAOsAAAAJDAxYjhiNGFkLTU2MDAtNDY3ZS05NDBhLTIzYTljMGZkMDA0Nw.jpg" alt="">
+          </div>
+        </div>
       </div>
     </div>
     <div class="p_column">
