--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -92,9 +92,9 @@
                     <li>Codeship</li>
                     <li>AJAX</li>
                     <li>RSpec</li>
-                    <li>Bootstrap</li>
-                    <li>Rubocop</li>
-                    <li>SQL</li>
+                    <li>JSON</li>
+                    <li>HTML/CSS</li>
+                    <li>React</li>
                   </ul>
                 </div>
               </div>
